<resources>
    <string name="app_name">Notes</string>

    <string name="add_note">Add Note</string>
    <string name="categories">Categories</string>

    <string name="add_category">Add Category</string>
    <string name="notes">Notes</string>

    <string name="delete_note">Delete</string>
    <string name="edit_note">Edit</string>

    <string name="title_error_message">* Enter Title</string>
    <string name="subtitle_error_message">* Enter description</string>
    <string name="select_date">Select Perform Date</string>
    <string name="choose_category">Choose Category</string>

    <string name="empty_state_note" type="string">No notes, click the button to add note!</string>
    <string name="empty_state_category" type="string">No categories, click the button to add note!</string>

    <string name="title_hint">Enter Title</string>
    <string name="description_hint">Enter Description</string>
    <string name="save_note">Save note</string>
    <string name="pick_date">Pick Date</string>
    <string name="select_category">Category</string>
    <string name="set_default_category">Default Category</string>
    <string name="confirm_category">Select</string>
    <string name="categories_state">Categories</string>

    <string name="save_category">Save category</string>
    <string name="colors_palette">Low (R, G, B)</string>
    <string name="seek_bar_red">Red</string>
    <string name="seek_bar_green">Green</string>
    <string name="seek_bar_blue">Blue</string>
    <string name="color_title_message">Color</string>

    <string name="calendar">Calendar</string>
    <string name="done">Done</string>
    <string name="perform_date">Perform Date</string>
    <string name="category">Category</string>

    <string name="fragment_notes">Notes</string>
    <string name="fragment_add_note">Create Note</string>
    <string name="fragment_edit_note">Edit Note</string>
    <string name="fragment_categories">Categories</string>
    <string name="fragment_add_category">Create Category</string>
    <string name="fragment_edit_category">Edit Category</string>
</resources>