<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/categoriesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories" />

    <Button
        android:id="@+id/addNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note" />

    <com.bigtoapp.notes.main.views.CustomProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:translationZ="100dp"
        android:visibility="visible"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/emptyStateTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/empty_state_note"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:translationZ="100dp"
        android:visibility="gone"
        tools:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="2"
        tools:listitem="@layout/note_item" />

</LinearLayout>